crates/viewer/dl_viewer/tests/snapshots/all_component_fallbacks__arch_fallback_dalaran.archetypes.Arrows3D.snap
---
source: crates/viewer/dl_viewer/tests/all_component_fallbacks.rs
expression: arch_display
---
vectors: [[0.0, 0.0, 0.0]]
origins: [[0.0, 0.0, 0.0]]
radii: [-1.5]
colors: [3161148927]
labels: []
show_labels: [true]
class_ids: [0]
