crates/viewer/dl_viewer/tests/snapshots/all_component_fallbacks__arch_fallback_dalaran.archetypes.DepthImage.snap
---
source: crates/viewer/dl_viewer/tests/all_component_fallbacks.rs
expression: arch_display
---
buffer: [[0]]
format: [{width: 0, height: 0, pixel_format: null, color_model: null, channel_datatype: null}]
meter: [1000.0]
colormap: [5]
depth_range: [[0.0, 1.7976931348623157e308]]
point_fill_ratio: [1.0]
draw_order: [-20.0]
magnification_filter: [1]
